# uha-web

./: .editorconfig  .env.example  .env.production  .eslintignore  .gitignore  .prettierrc.cjs  .releaserc.json  LICENSE  README.md  docker-compose.yml  example.env  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  web.env
asse-backend/: .dockerignore  Cargo.toml  Dockerfile  README.md  local.env
asse-backend/migrations/2024-10-26-151621_init_tables/: down.sql  up.sql
asse-backend/src/: main.rs  schema.rs
asse-backend/src/errors/: reg_errors.rs
asse-backend/src/models/settings/: theme.rs
asse-backend/src/models/users/: mod.rs
asse-backend/src/routes/: mod.rs
asse-backend/src/routes/apps/: delete_app.rs
asse-backend/src/routes/auth/: _routes.rs  login.rs  logout.rs  mod.rs  new_token.rs  regenerate_token.rs  register.rs  verify_email.rs
asse-backend/src/routes/health/: _routes.rs  db_check.rs  heartbeat.rs  mod.rs  psql_check.rs  redis_check.rs
asse-backend/src/routes/subscriptions/: get_many_subscriptions.rs  get_subscription.rs  mod.rs
asse-backend/src/routes/users/: _routes.rs  get_personal_data.rs  get_user.rs  mod.rs  update_user.rs
asse-backend/src/service/: data_providers.rs  env.rs  in_deploy_migrations.rs  middlewares.rs  mod.rs
asse-backend/src/templates/: reset_email.html  verification_email.html
asse-backend/src/types/: mod.rs
asse-backend/src/types/auth/: mod.rs  users.rs
asse-backend/src/utils/: acquire_pg_connection.rs  emails.rs  mod.rs
asse-backend/src/utils/uploads/: compress_image.rs  delete_avatar.rs  get_extension_from_mime.rs  mod.rs  update_avatar.rs
asse-db/: db.sql
backend/: Cargo.toml  Dockerfile  README.md  local.env
backend/migrations/2024-10-26-151621_init_tables/: down.sql  up.sql
backend/migrations/2024-11-16-082641_populate_admin_user/: down.sql  up.sql
backend/migrations/2024-11-17-055851_add_default_applications/: down.sql  up.sql
backend/migrations/2024-11-22-093839_add_default_payment_methods/: down.sql  up.sql
backend/migrations/2024-12-10-171923_add_subscriptions_stubs/: up.sql
backend/src/: main.rs  schema.rs
backend/src/errors/: reg_errors.rs
backend/src/models/: mod.rs
backend/src/models/applications/: application.rs  mod.rs
backend/src/models/categories/: category.rs  mod.rs
backend/src/models/payment_methods/: mod.rs  payment_method.rs
backend/src/models/settings/: currency.rs  language.rs  mod.rs  theme.rs
backend/src/models/subscriptions/: interval_types.rs  mod.rs  subscription.rs
backend/src/models/users/: user_profile.rs
backend/src/routes/: mod.rs
backend/src/routes/apps/: _routes.rs  create_app.rs  delete_app.rs  get_apps.rs  get_apps_preview.rs  mod.rs  search_app.rs  update_app.rs
backend/src/routes/auth/: _routes.rs  login.rs  logout.rs  mod.rs  regenerate_token.rs  register.rs  verify_email.rs
backend/src/routes/categories/: _routes.rs  get_categories.rs  get_categories_preview.rs  mod.rs
backend/src/routes/health/: _routes.rs  heartbeat.rs
backend/src/routes/payments/: _routes.rs  get_payments.rs  mod.rs
backend/src/routes/subscriptions/: _routes.rs  create_subscription.rs  delete_subscription.rs  get_many_subscriptions.rs  get_subscription.rs  get_subscriptions.rs  mod.rs  update_subscription.rs
backend/src/routes/users/: _routes.rs  delete_user.rs  get_personal_data.rs  get_user.rs  mod.rs  update_user.rs
backend/src/service/: data_providers.rs  env.rs  middlewares.rs
backend/src/templates/: verification_email.html
backend/src/types/: general.rs  mod.rs
backend/src/types/auth/: mod.rs  users.rs
backend/src/types/users/: mod.rs  update.rs
backend/src/utils/: check_port_in_use.rs  get_session_user_id.rs  mod.rs
backend/src/utils/auth/: password.rs
backend/src/utils/uploads/: delete_avatar.rs  get_extension_from_mime.rs  get_file_bytes.rs  update_avatar.rs
(+808 files in other folders)
