[package]
name = "subsawwy_backend"
version = "0.1.0"
authors = ["Alena Dzhukich <github@alena.red>"]
edition = "2021"

[[bin]]
edition = "2021"
name = "subsawwy_backend"
path = "src/main.rs"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-governor = "0.6.0"
actix-redis = "0.13.1"
actix-rt = "2.10.0"
actix-service = "2.0.2"
actix-web = "4.9.0"
awc = { version = "3.5.1", features = ["openssl"] }
tokio = { version = "1.40.0", features = ["full"] }
diesel = { version = "2.2.4", features = [
  "postgres",
  "r2d2",
  "chrono",
  "uuid",
  "serde_json",
] }
diesel-async = { version = "0.5.0", features = ["postgres", "deadpool"] }
deadpool-postgres = "0.14.0"
diesel_migrations = "2.2.0"
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_with = "3.11.0"
env_logger = "0.11.5"
uuid = { version = "1.10.0", features = [
  "v4",
  "fast-rng",
  "serde",
  "macro-diagnostics",
] }
chrono = { version = "0.4.38", features = ["serde"] }

url = "2.5.2"
log = { version = "0.4.22", features = ["std", "serde"] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
serde_derive = "1.0.210"
serde_json = { version = "1.0.128", features = ["raw_value"] }
serde_json_path = "0.6.7"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
redis = { version = "0.27.4", features = ["tls"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "fmt",
  "std",
  "env-filter",
  "registry",
  'json',
  'tracing-log',
] }
config = { version = "0.14.0", features = ["yaml"] }
pasetors = "0.7.0"
hex = "0.4.3"
argon2 = "0.5.3"
lettre = { version = "0.11.9", features = ["builder", "tokio1-native-tls"] }
minijinja = "2.3.1"
email_address = "0.2.9"
openssl = "0.10.66"
postgres-openssl = "0.5.0"
native-tls = "0.2.12"
sqlx = { version = "0.8.2", features = [
  "postgres",
  "uuid",
  "runtime-tokio-rustls",
  "chrono",
] }
once_cell = "1.20.2"
